--- a/api/example.env
+++ b/api/example.env
@@ -1,3 +1,4 @@
 CLIENT_ID=your_client_id
 CLIENT_SECRET=your_password
 BASE_URL=pedidosya_base_url
+DATABASE_URL=mongodb://localhost:27017/app-restaurant
