--- a/api/package.json
+++ b/api/package.json
@@ -30,7 +30,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
-    "mogoose": "0.0.1-security"
+    "mongoose": "^5.9.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
